Add answer list~

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 
     <div id="q"></div>
     <input id="a" type="text">
-    <div class="clearfix">
+    <div class="btn_group clearfix">
         <div id="hint" class="btn">HINT</div>
         <div id="next" class="btn">NEXT</div>
     </div>
+    <div id="answer_list" class="clearfix"></div>
 
 </div>
 </body>
