--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="js/main.js"></script>
 </head>
 <body>
+
 <div class="container">
 
     <div id="q"></div>
@@ -35,5 +36,19 @@
     <div id="answer_list" class="clearfix"></div>
 
 </div>
+
+<div id="lnb_btn"></div>
+
+<div id="lnb">
+    <ul class="menu">
+        <li data-engdata="preposition.json">전치사</li>
+        <li data-engdata="test.json">테스트</li>
+    </ul>
+    <div class="close_btn">
+        <div class="line line1"></div>
+        <div class="line line2"></div>
+    </div>
+</div>
+
 </body>
 </html>
