--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--<link rel="shortcut icon" href="favicon.ico" />-->
 
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet/less" type="text/css" href="css/main.less" />
 
     <!--[if lt ie 9]>
     <script src="js/vendor/ie9.js"></script>
@@ -21,6 +21,7 @@
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="js/vendor/jquery-1.10.1.min.js"></script>
     <script src="js/vendor/jquery.easing.1.3.min.js"></script>
+    <script src="js/vendor/less.min.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
