--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div id="lnb">
     <ul class="menu">
         <li data-engdata="preposition.json">전치사</li>
-        <li data-engdata="test.json">테스트</li>
+        <li data-engdata="tense.json">시제 공식</li>
     </ul>
     <div class="close_btn">
         <div class="line line1"></div>
